--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.3.4",
+    "coderwhy": "^1.2.2",
     "element-plus": "^2.3.2",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
